[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = "1.0"
rand = "0.8.3"
quote = "1.0"
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4.0"
ndarray = "0.15.0"

# When a panic occurs, the program starts unwinding, which means Rust
# walks back up the stack and cleans up the data from each function.

#[profile.release]
#panic = 'abort'



