[package]
name = "SangMD"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whiteread = "0.5.0"
syn = "1.0"
rand = "0.8.5"
quote = "1.0"
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4.0"
ndarray = "0.15.0"
itertools = "0.10.3"
itertools-num= "0.1.3"
cute = "0.3.0" # A macro for python-esque comphrensions 
csv = "1.1"

# When a panic occurs, the program starts unwinding, which means Rust
# walks back up the stack and cleans up the data from each function.

#[profile.release]
#panic = 'abort'



